# anti-sycophancy-ai-chatbot

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_memory_schema.py
backend/data/: sample_conversations.json
backend/data/benchmarks/: anti_sycophancy_benchmark.json
backend/data/eval_reports/: report.html  report.json  report.md
backend/data/sft/: dataset_info.json  train.jsonl  val.jsonl
backend/scripts/: export_sft_from_db.py  generate_sft_dataset.py  run_eval.py
backend/src/app/: __init__.py  main.py
backend/src/app/api/: __init__.py  chat.py  deps.py  router.py
backend/src/app/config/: __init__.py  settings.py  training.py
backend/src/app/core/: __init__.py  exceptions.py  lifespan.py  security.py
backend/src/app/database/: __init__.py  base.py  session.py
backend/src/app/domain/: __init__.py  assumptions.py  claims.py  classification.py  confidence.py  contradiction_check.py  debate.py  entities.py  fallacies.py  interfaces.py  llm_interface.py  memory.py  memory_extraction.py  (+3 more)
backend/tests/: conftest.py  test_assumption_detector.py  test_assumption_parser.py  test_assumption_prompt.py  test_chat.py  test_chat_pipeline.py  test_claim_extractor.py  test_claim_parser.py  test_claim_prompt.py  test_classify_api.py  test_confidence_engine.py  test_confidence_parser.py  test_confidence_prompt.py  test_contradiction_checker.py  test_contradiction_detector.py  test_contradiction_parser.py  test_contradiction_prompt.py  test_contradiction_store.py  test_debate_api.py  test_debate_engine.py  test_debate_judge_parser.py  test_debate_prompt.py  test_eval_framework.py  test_eval_pipeline.py  test_fallacy_detector.py  test_fallacy_parser.py  test_fallacy_prompt.py  test_health.py  test_input_classifier.py  test_memory_extractor.py  test_memory_mappers.py  test_memory_parser.py  test_memory_prompt.py  test_memory_repositories.py  test_memory_store.py  test_metric_registry.py  test_model_manager.py  test_opponent_agent_parser.py  test_opponent_agent_prompt.py  test_prompt_manager.py  (+7 more)
(+378 files in other folders)
